@@ -122,15 +122,13 @@ SEXP dsyMatrix_matrix_mm(SEXP a, SEXP b, SEXP rtP)
 			REAL(GET_SLOT(a, Matrix_xSym)), adims, bcp,
 			&m, &zero, vx, &m);
     // add dimnames:
-    if(rt) { // v <- b %*% a : rownames(v) == rownames(b)  are already there
-	SET_VECTOR_ELT(GET_SLOT(val, Matrix_DimNamesSym), 1,
-		duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym), 1)));
-    } else { // v <- a %*% b : colnames(v) == colnames(b)  are already there
-	SET_VECTOR_ELT(GET_SLOT(val, Matrix_DimNamesSym), 0,
-		duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym), 0)));
-    }
+    int nd = rt ?
+	1 : // v <- b %*% a : rownames(v) == rownames(b)  are already there
+	0;  // v <- a %*% b : colnames(v) == colnames(b)  are already there
+    SEXP nms = PROTECT(duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym), nd)));
+    SET_VECTOR_ELT(GET_SLOT(val, Matrix_DimNamesSym), nd, nms);
     if(mn >= SMALL_4_Alloca) Free(bcp);
-    UNPROTECT(1);
+    UNPROTECT(2);
     return val;
 }
 
